# self-assessment

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: check-and-lint.yaml  publish-crate.yaml  release-packaging.yaml
scripts/: make_release.sh
src/: cli.rs  credentials.rs  generate_report.rs  github.rs  helpers.rs  main.rs  models.rs  trello.rs
src/template/: template.hbs
