[package]
name = "self-assessment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
tokio = { version = "1.15.0", features = ["full"] }
serde_json = "1.0.74"
clap = { version = "3.0.14", features = ["derive"] }
octocrab = "0.15.0"
serde = { version = "1.0.132", features = ["derive"] }
url = "2.2.2"
markdown = "0.3"
shellexpand = "2.1.0"
rust-ini = "0.17"
handlebars = "4.2.1"
colorsys = "0.6.5"