[package]
name = "self-assessment"
version = "2.1.0"
edition = "2021"
description = "A CLI tool that generates a list of pull requests raised and reviewed in the Guardian's GitHub organisation, as well as an optional summary of the user's Trello boards and cards."
license = "MIT"
repository = "https://github.com/guardian/self-assessment"
keywords = ["guardian", "cli-tool", "cli", "self-assessment", "github"]
categories = ["command-line-interface", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.74"
clap = { version = "3.0.14", features = ["derive"] }
octocrab = "0.43.0"
serde = { version = "1.0.132", features = ["derive"] }
url = "2.5.4"
markdown = "1.0.0-alpha.21"
shellexpand = "2.1.0"
rust-ini = "0.17"
handlebars = "4.2.1"
colorsys = "0.6.7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.95"

[[bin]]
name = "self-assessment"
test = false
bench = false
